--- a/modern_bank_page/package.json
+++ b/modern_bank_page/package.json
@@ -1,9 +1,11 @@
 {
   "name": "modern_bank_page",
+  "homepage": "https://gitname.github.io/react-gh-pages",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -17,6 +19,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
